chandeliers-lus/tests/warn/dead_code/exported.stderr
error: method `step` is never used
 --> tests/warn/dead_code/exported.rs:6:14
  |
6 |         node foo() returns ();
  |              ^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/exported.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^
